@@ -63,6 +63,7 @@ Holger Schurig
 Robert Sedevici
 Juergen Stuber
 Hartley Sweeten
+Ville Voipio
 David Vrabel
 Alan Wallace
 Jeff Wittrock
